RemoveLastCommand.java